--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -37,6 +37,7 @@ and open the template in the editor.
             <ul class="navbar-nav ml-auto">
                 <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Login</a></li>
                 <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                <li id="logoutbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html" onclick="logout()">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -89,7 +90,15 @@ and open the template in the editor.
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
     </script>
-
+    <script>
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                $(".hide-user").hide();
+            } else {
+                $(".hide-no-user").hide();
+            }
+        });
+    </script>
     <script src="../JavaScripts/vue.min.js"></script>
     <script src="../JavaScripts/login_signup.js"></script>
 
