--- a/Common/create.html
+++ b/Common/create.html
@@ -25,12 +25,13 @@
         		<ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="create.html">Create</a></li>
                     <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
+                    <li class="nav-item active hide-no-user"><a class="nav-link" href="UserProfile.html">Profile</a></li>
         		</ul>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Login</a></li>
-        	        <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                    <li class="right-nav-item nav-item active hide-user"><a class="right-nav-link" href="Login.html">Login</a></li>
+                    <li class="right-nav-item nav-item active hide-user"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                    <li id="logoutbutton" class="right-nav-item nav-item active hide-no-user"><a class="right-nav-link" href="Login.html" onclick="logout()">Logout</a></li>
                 </ul>
             </div>
         </nav>
@@ -141,7 +142,7 @@
 
                     </div>
                     <div class="row justify-content-end">
-                            <div class="col-md-3 hide-import">
+                            <div class="col-md-3 hide-no-user">
                                 <form autocomplete="off" action="/action_page.php">
                                     <div class="autocomplete">
                                         <b style="color: #53929B">Import Your Saved Trip: </b>
@@ -149,7 +150,7 @@
                                     </div>
                                 </form>
                             </div>
-                            <div class="col-md-1 hide-import">
+                            <div class="col-md-1 hide-no-user">
                                 <div class="submit-button">
                                     <input class="save-submit" type="submit" id="submit" value="Import" onclick="importTrip()">
                                 </div>
@@ -282,6 +283,15 @@
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
             firebase.analytics();
+        </script>
+        <script>
+            firebase.auth().onAuthStateChanged(function(user) {
+                if (user) {
+                    $(".hide-user").hide();
+                } else {
+                    $(".hide-no-user").hide();
+                }
+            });
         </script>
         <script src="../JavaScripts/vue.min.js"></script>
         <script src="../JavaScripts/routeGeneration.js"></script>
