--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -31,13 +31,13 @@ and open the template in the editor.
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
                 <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
+                <li class="nav-item active hide-no-user"><a class="nav-link" href="UserProfile.html">Profile</a></li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Login</a></li>
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
-                <li id="logoutbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html" onclick="logout()">Logout</a></li>
+                <li class="right-nav-item nav-item active hide-user"><a class="right-nav-link" href="Login.html">Login</a></li>
+                <li class="right-nav-item nav-item active hide-user"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                <li id="logoutbutton" class="right-nav-item nav-item active hide-no-user"><a class="right-nav-link" href="Login.html" onclick="logout()">Logout</a></li>
             </ul>
         </div>
     </nav>
