--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -68,22 +68,8 @@
                     <p id=aboutmeText class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
 
                     <h3 class="extra_margin"> My Recent Trips: </h3>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="ViewTrip.html">
-                            Lowell, MA -> Denver, CO
-                        </a>
-                    </div>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="ViewTrip.html">
-                            Minnesota -> Denver, CO
-                        </a>
-                    </div>
+                    <div id=card_container>
 
-                    <h3 class="extra_margin"> Trips I need to upload: </h3>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="UploadTrip.html">
-                            Boston -> San Francisco
-                        </a>
                     </div>
                     <h3 class="extra_margin"> Places I'd Like To Go: </h3>
                     <p id="placesText" class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
