added trip cards to profiles

--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -65,18 +65,16 @@
 
                     </div>
                     <h3 id="about"class="extra_margin"> About Me: </h3>
-                    <p id=aboutmeText class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-
+                    <p id=aboutmeText class="lead extra_margin"> </p>
                     <h3 class="extra_margin"> My Recent Trips: </h3>
-                    <div id=card_container>
+                    <div id="accordion">
 
-                    </div>
+                    </div><br>
                     <h3 class="extra_margin"> Places I'd Like To Go: </h3>
-                    <p id="placesText" class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-
+                    <p id="placesText" class="lead extra_margin"> </p>
 
                     <h3 class="extra_margin"> Location: </h3>
-                    <p id="locationText" class="lead extra_margin"> Default Location </p>
+                    <p id="locationText" class="lead extra_margin"> </p>
 
                 </div>
 
