--- a/Common/otherProfile.html
+++ b/Common/otherProfile.html
@@ -63,23 +63,10 @@
                     <p id=aboutmeText class="lead extra_margin"></p>
 
                     <h3 class="extra_margin"> My Recent Trips: </h3>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="ViewTrip.html">
-                            Lowell, MA -> Denver, CO
-                        </a>
-                    </div>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="ViewTrip.html">
-                            Minnesota -> Denver, CO
-                        </a>
+                    <div id="accordion" class="route-cards">
+
                     </div>
 
-                    <h3 class="extra_margin"> Trips I need to upload: </h3>
-                    <div class="card-header round-pill">
-                        <a class="card-link extra_margin"  href="UploadTrip.html">
-                            Boston -> San Francisco
-                        </a>
-                    </div>
                     <h3 class="extra_margin"> Places I'd Like To Go: </h3>
                     <p id="placesText" class="lead extra_margin"> </p>
 
