Got importing trips working

--- a/Common/EditUserProfile.html
+++ b/Common/EditUserProfile.html
@@ -71,14 +71,14 @@
 
                     </div>
                     <h3 id="about"class="extra_margin"> About Me: </h3>
-                    <textarea id="aboutmeText" class="lead extra_margin submissionfield" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."> </textarea>
+                    <textarea id="aboutmeText" class="lead extra_margin submissionfield" placeholder="Tell us a bit about yourself..."> </textarea>
 
                     <h3 class="extra_margin"> My Recent Trips: </h3>
                     <div id=card_container>
 
                     </div>
                     <h3 class="extra_margin"> Places I'd Like To Go: </h3>
-                    <textarea id="placesText" class="lead extra_margin submissionfield" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."> </textarea>
+                    <textarea id="placesText" class="lead extra_margin submissionfield" placeholder="Where have you always wanted to go?..."> </textarea>
 
 
                     <h3 class="extra_margin"> Location: </h3>
@@ -89,13 +89,6 @@
 
             </div>
 
-        </div>
-        <div class="footer-container container-fluid">
-            <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
-            <div class="footer-margin row">
-                <p>This is where footer stuff will go</p>
-            </div>
-            <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
         </div>
 
 
